--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,31 @@
-h1 {
+/* basic html styles */
+html {
+  font-size: 100%;
+  line-height: 1.5rem;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  /* end basic html sytles */
+}
+
+body {
+  margin: 0 auto;
+  padding: 0;
+  min-height: 100%;
+  max-width: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+
   color: red;
 }
 
-p {
-  color: darkolivegreen;
+.big-heading {
+  color: rgb(151, 42, 8);
+  font-size: 50px;
 }
 
 img {
