--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,8 @@ html {
   font-size: 100%;
   line-height: 1.5rem;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Times New Roman", Times, serif;
   height: 100%;
-  /* end basic html sytles */
 }
 
 body {
@@ -19,17 +18,71 @@ body {
 *::before,
 *::after {
   box-sizing: inherit;
-
-  color: red;
-}
-
-.big-heading {
-  color: rgb(151, 42, 8);
-  font-size: 50px;
 }
 
 img {
   width: 100%;
   height: auto;
   display: block;
+}
+
+/* end basic html sytles */
+
+.hero-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 0px;
+  align-content: center;
+  justify-content: center;
+  align-items: start;
+  height: 100%;
+  width: 100%;
+}
+
+.hero-image-box {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
+
+.hero-image-box::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(85, 8, 8, 0.342);
+}
+
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero-text-box {
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+  align-self: center;
+  padding: 1rem;
+  z-index: 10;
+  text-align: center;
+}
+
+.hero-heading {
+  font-size: 2rem;
+  letter-spacing: 0.05rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: whitesmoke;
+}
+
+.hero-text {
+  font-size: 1.5rem;
+  margin-top: 0.5rem;
+  color: white;
 }
