--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,58 @@ img {
 
 /* end basic html sytles */
 
+/* Begin Navbar Styles */
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  line-height: 1rem;
+  overflow: hidden;
+  background-color: white;
+}
+
+.social-nav-item {
+  flex-grow:1;
+  flex-shrink:1;
+  flex-basis: 10%;
+}
+
+.logo a, .nav-menu a {
+  display: block;
+  text-decoration: none;
+  letter-spacing: .2rem;
+  padding: .8rem;
+  color: black;
+}
+
+.logo a {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.nav-menu a {
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  border-bottom: 1px solid #fff;
+  transition: all ease 0.1s;
+}
+.nav-menu a:hover {
+  border-bottom: 1px solid #000;
+}
+.top-nav {
+  background: none;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  align-content: top;
+  position: fixed;
+
+  top: 0;
+  height: 8rem;
+}
+
+
+}
 .hero-box {
   display: grid;
   grid-template-columns: 1fr;
