--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,15 @@ html {
   font-size: 100%;
   line-height: 1.5rem;
   box-sizing: border-box;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion) {
+  html {
+    scroll-behavior: initial;
+  }
 }
 
 body {
@@ -13,7 +20,6 @@ body {
   min-height: 100%;
   max-width: 100%;
 }
-
 *,
 *::before,
 *::after {
@@ -26,10 +32,10 @@ img {
   display: block;
 }
 
-/* end basic html sytles */
+/* end basic html styles */
 
 /* Begin Navbar Styles */
-.navbar {
+.nav-bar {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -37,19 +43,47 @@ img {
   line-height: 1rem;
   overflow: hidden;
   background-color: white;
+  z-index: 1000;
+}
+
+.logo,
+.nav-menu {
+  text-transform: uppercase;
+}
+
+.logo,
+.nav-item {
+  white-space: nowrap;
+}
+
+.nav-menu {
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-item {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 33%;
+  text-align: center;
 }
 
 .social-nav-item {
-  flex-grow:1;
-  flex-shrink:1;
+  flex-grow: 1;
+  flex-shrink: 1;
   flex-basis: 10%;
 }
 
-.logo a, .nav-menu a {
+.logo a,
+.nav-menu a {
   display: block;
   text-decoration: none;
-  letter-spacing: .2rem;
-  padding: .8rem;
+  letter-spacing: 0.2rem;
+  padding: 0.8rem;
   color: black;
 }
 
@@ -64,22 +98,46 @@ img {
   border-bottom: 1px solid #fff;
   transition: all ease 0.1s;
 }
+
 .nav-menu a:hover {
   border-bottom: 1px solid #000;
 }
+
 .top-nav {
   background: none;
   grid-column: 1/-1;
   grid-row: 1/-1;
   align-content: top;
   position: fixed;
-
   top: 0;
   height: 8rem;
 }
 
-
+@supports (position: sticky) {
+  .top-nav {
+    position: -webkit-sticky; /* for safari */
+    position: sticky;
+  }
 }
+
+.top-nav .logo a,
+.top-nav .nav-menu a {
+  color: white;
+}
+
+.top-nav .nav-menu a:hover {
+  border-bottom: 1px solid #fff;
+}
+
+.top-nav .nav-menu a {
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
+
+.section-scroll {
+  scroll-margin-top: 9rem;
+  padding: 0 0 4rem 0;
+}
+
 .hero-box {
   display: grid;
   grid-template-columns: 1fr;
@@ -90,6 +148,7 @@ img {
   align-items: start;
   height: 100%;
   width: 100%;
+  margin-top: -8rem;
 }
 
 .hero-image-box {
@@ -131,7 +190,7 @@ img {
   letter-spacing: 0.05rem;
   font-weight: bold;
   text-transform: uppercase;
-  color: whitesmoke;
+  color: white;
 }
 
 .hero-text {
@@ -142,8 +201,11 @@ img {
 
 /* Begin Portfolio Gallery Styles */
 
-.portfolio-gallery {
+.portfolio-container {
   margin: 1rem auto 0 auto;
+}
+
+.portfolio-gallery {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 0.5rem;
@@ -166,9 +228,46 @@ img {
   transform: scale(1.5);
 }
 
-.portfolio-gallery h1 {
+.portfolio-container h1 {
   font-size: 2rem;
   line-height: 2rem;
+  padding-left: 1rem;
+}
+
+/* Begin About Section Styles */
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem auto 0 auto;
+}
+
+.about-text {
+  margin: 0 auto;
+  padding: 0 0.5rem;
+}
+
+.about-text h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.about-image img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-social {
+  display: flex;
+  justify-content: start;
+}
+
+.about-social a {
+  color: black;
+  padding: 0 1rem 1rem 1rem;
+}
+
+.about-social a:hover {
+  color: pink;
 }
 
 /* Begin Media Queries for Tablets and Desktop */
@@ -182,15 +281,72 @@ img {
     font-size: 2rem;
     line-height: 2rem;
   }
+  .portfolio-container h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+  .about-container {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  .about-text h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+  .about-text p {
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+  }
+  .nav-bar {
+    line-height: 1.5rem;
+  }
+  .nav-menu {
+    padding: 0 1rem;
+  }
+  .nav-item {
+    flex: 1 1;
+  }
 }
 
 @media (min-width: 920px) {
   .hero-heading {
+    font-size: 10rem;
+    line-height: 10rem;
+  }
+  .hero-text {
     font-size: 6rem;
     line-height: 6rem;
   }
-  .hero-heading {
-    font-size: 8rem;
-    line-height: 8rem;
+  .portfolio-container h1 {
+    font-size: 5rem;
+    line-height: 5rem;
+  }
+  .portfolio-container,
+  .about-container {
+    max-width: 1400px;
+  }
+  .about-text h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .about-text p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  .about-social a {
+    font-size: 3rem;
+    padding: 0 2rem 2rem 2rem;
+  }
+  .nav-bar {
+    justify-content: space-between;
+    padding: 2rem 0;
+    line-height: 1rem;
+  }
+  .nav-menu {
+    width: auto;
+    justify-self: end;
+  }
+  .top-nav {
+    width: 100%;
   }
 }
