--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
   padding: 0;
   min-height: 100%;
   max-width: 100%;
+  padding-bottom: 12rem;
 }
 *,
 *::before,
@@ -92,6 +93,9 @@ img {
   font-size: 2rem;
 }
 
+.logo-image {
+  height: 3rem;
+}
 .nav-menu a {
   font-weight: 400;
   letter-spacing: 0.1rem;
@@ -187,6 +191,7 @@ img {
 
 .hero-heading {
   font-size: 2rem;
+  line-height: 2.5rem;
   letter-spacing: 0.05rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -224,8 +229,16 @@ img {
   transition: 0.5s ease-in-out;
 }
 
+.video-center {
+  transform: scale(1.5);
+}
+
 .gallery-img:hover {
   transform: scale(1.5);
+}
+
+.video-center:hover {
+  transform: scale(2);
 }
 
 .portfolio-container h1 {
@@ -273,6 +286,9 @@ img {
 /* Begin Media Queries for Tablets and Desktop */
 
 @media (min-width: 600px) {
+  .logo-image {
+    height: 5rem;
+  }
   .hero-heading {
     font-size: 4rem;
     line-height: 4rem;
@@ -309,6 +325,16 @@ img {
 }
 
 @media (min-width: 920px) {
+  .logo-image {
+    height: 8rem;
+    padding: 0 0 2rem 2rem;
+  }
+  .top-nav {
+    height: 12rem;
+  }
+  .hero-box {
+    margin-top: -12rem;
+  }
   .hero-heading {
     font-size: 10rem;
     line-height: 10rem;
